// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AsciiViews AsciiStatusbar displays statusBarMessage if no rows 1`] = `
<div>
  <div
    class="sc-gipzik hLTrPI"
  >
    <div
      class="sc-bdVaJa kwzqrW"
    >
      Completed after 10  ms.
    </div>
  </div>
</div>
`;

exports[`AsciiViews AsciiStatusbar displays statusBarMessage if no rows 2`] = `
<div>
  <div
    class="sc-gipzik hLTrPI"
  >
    <div
      class="sc-caSCKo izUVoK"
    >
      <div
        class="sc-kjoXOD gydYuY"
      >
        Max column width:
        <input
          class="sc-cHGsZl dQKxEh"
          max="3"
          min="3"
          type="range"
          value="70"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AsciiViews AsciiView displays bodyMessage if no rows 1`] = `
<div>
  <div
    class="sc-kGXeez jXRZHy"
  >
    <div
      class="sc-hzDkRC bFjnRm"
    >
      (no changes, no records)
    </div>
  </div>
</div>
`;

exports[`AsciiViews AsciiView does not display bodyMessage if rows 1`] = `
<div>
  <div
    class="sc-kGXeez jXRZHy"
  >
    <pre
      class="sc-csuQGl gEmoAQ"
    >
      ╒═══╕
│"x"│
╞═══╡
│"y"│
└───┘
    </pre>
  </div>
</div>
`;
